# tweet_gen

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/lib/: chain.py  prompts.py  utils.py
config/: config.py  logger.py
frontend/: app.py
frontend/lib/: display.py  utils.py
tweet_gen/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt
tweet_gen/backend/: main.py
tweet_gen/backend/lib/: chain.py  prompts.py  utils.py
tweet_gen/config/: config.py
tweet_gen/frontend/: app.py
tweet_gen/frontend/lib/: utils.py
tweet_gen/tests/unit_tests/: placeholder_test_file.py
