[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tweet_gen"
authors = [
  { name = "JulienFdez00", email = "j.fernandez17@ejm.org" },
]
description = "Gen AI tender books helper"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "http://TBD"
"Documentation" = "http://TBD"

[tool.setuptools]
packages = ["lib", "config"]

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D203", "D213", "ANN101", "ANN102", "D103", "PTH123"]
line-length = 120
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "*.ipynb",
  "config/config.py",
]


[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.isort]
known-first-party = ["lib", "config"]
